fix: 더 이상 사용되지 않는 WebSecurityConfigurerAdapter 코드 변경